test-yamls/wordpress-dep.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: wordpress-efs
  name: wordpress-efs
  namespace: staraus
#  annotations:
spec:
  ports:
    - port: 80
      targetPort: 80
    #  nodePort: 32762
  selector:
    name: wordpress-efs
  #type: LoadBalancer
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: wordpress-efs
  name: wordpress-efs
  namespace: staraus
spec:
  replicas: 2
  selector:
    matchLabels:
      name: wordpress-efs
  template:
    metadata:
      labels:
        name: wordpress-efs
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: wordpress-efs
        volumeMounts:
        - mountPath: /var/www/html
          name: wordpress-efs-volume
        - mountPath: /usr/local/etc/php/conf.d/uploads.ini
          name: php-config
          subPath: uploads.ini
      volumes:
      - name: "wordpress-efs-volume"
        persistentVolumeClaim:
          claimName: wordpress-efs-pv
      - name: php-config
        configMap:
          name: "wordpress-efs-php-config"
