test-yamls/ingress-staraus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    name: wordpress-efs
  name: staraus-ingress
  namespace: staraus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.allow-http: "false"
  #  nginx.ingress.kubernetes.io/scheme: internet-facing
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-south-1:971691552202:certificate/fe3869ed-f773-4d4b-afdd-38c182d4295b
    # Ingress Core Settings
    #kubernetes.io/ingress.class: nginx
    #alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    #alb.ingress.kubernetes.io/healthcheck-protocol: 'HTTP'
    #alb.ingress.kubernetes.io/healthcheck-port: 32761 
    #alb.ingress.kubernetes.io/healthcheck-path: '/healthz' # Put the path of readiness probe over here
    #alb.ingress.kubernetes.io/healthcheck-interval-seconds: 15
    #alb.ingress.kubernetes.io/healthcheck-timeout-seconds: 5
    #alb.ingress.kubernetes.io/success-codes: 200
    #alb.ingress.kubernetes.io/healthy-threshold-count: 2
    #alb.ingress.kubernetes.io/unhealthy-threshold-count: 2
    ## SSL Settings
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    #alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:ap-south-1:971691552202:certificate/af3b9cf7-775d-4804-8cde-d9f606691e73' # make sure you update your certificate arn over here
    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)
    # redirect all HTTP to HTTPS
    #alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: wordpress-efs
      port:
        number: 80
  rules:
  - host: 'staraus.com'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-efs
            port:
              number: 80
